# thoth

./: README.md  pyproject.toml
prompts/: gcp_context.md  prompt.md  ssh_context.md
src/thoth/: __init__.py  cli.py  config.py  crypto.py  display.py  gcp.py  infrastructure.py  input.py  mcp.py  mcp_client.py  models.py  repl.py  result.ini  ssh.py  utils.py
