[project]
name = "thoth"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "prompt-toolkit>=3.0.0",
    "cryptography>=41.0.0",
    "readchar>=4.0.0",
    "requests>=2.31.0",
]

[project.scripts]
thoth = "thoth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thoth"]
